# Demo2

./: .gitignore  CMakeLists.txt  Demo2.cbp  Demo2.depend  Demo2.layout  Makefile  benchmark.csv  clElements.c  clElements.h  ff_288  ff_648  glElements.c  glElements.h  main.c  parameters.h  types.c  types.h  vs_radiosity.sln  vs_radiosity.vcxproj  vs_radiosity.vcxproj.filters
clew/: clew.c  clew.cbp  clew.layout  clew.vcxproj
kernels/: kernel
scenes/: 1.txt
shaders/: GetZbuf.frag  GetZbuf.vert  SSAO.frag  SSAO.vert  fragment shader  fragment.frag  geometry shader  geometry.geom  vertex shader.save-failed  vertex.vert
